# buildallm

./: .gitignore  GEMINI.md  buildllmfromscratch_pretrain.ipynb  chapter04.py  chapter05.py  chapter6.ipynb  chapter6download.py  downloadgpt2.ipynb  layernormexample.py  llm.ipynb  main.py  modelsummary.md  pyproject.toml  trainexample.py
data/: the-verdict.txt
