[project]
name = "buildallm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "tensorflow>=2.20.0",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
